# ledger-parser-adhoc

./: Cargo.toml  README.md
src/: account.rs  amount.rs  commodity.rs  context.rs  filters.rs  global.rs  journal.rs  lib.rs  new_parser.rs  output.rs  pool.rs  post.rs  report.rs  scope.rs  session.rs  textual.rs  xact.rs
